# max-flow-scheduler

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.codex/skills/api-contracts/: SKILL.md
.codex/skills/cpp-engine/: SKILL.md
.codex/skills/data-fixtures/: SKILL.md
.codex/skills/devops-release/: SKILL.md
.codex/skills/frontend-planner-ui/: SKILL.md
.codex/skills/integration-orchestrator/: SKILL.md
.codex/skills/modeling-theory/: SKILL.md
.codex/skills/performance-benchmarks/: SKILL.md
.codex/skills/planner-architect/: SKILL.md
.codex/skills/qa-reliability/: SKILL.md
.codex/skills/repo-bootstrap/: SKILL.md
.codex/skills/security-compliance/: SKILL.md
.codex/skills/technical-writer/: SKILL.md
.github/workflows/: ci.yml  release.yml  rollback.yml
apps/api/: .env.development.example  .env.example  .env.production.example  .env.staging.example  Dockerfile  openapi.json  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/scripts/: export-openapi.ts  seed-demo.mjs
apps/api/src/: app.ts  index.ts
apps/api/tests/: auth-config.test.ts  auth-dev-token.test.ts  auth.middleware.test.ts  doctors.test.ts  error-handler.test.ts  health.test.ts  openapi-export.test.ts  openapi.test.ts  periods.test.ts  planning-cycles.test.ts  request-context.test.ts  schedule.test.ts  security.middleware.test.ts  sprint-availability.test.ts  sprint.test.ts  (+2 more)
apps/web/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: adr-001-release-operations.md  adr-002-architecture-v1.md  agent-routing.md  auth-oidc-jwks-operations.md  backlog.md  contract-versioning.md  execution-board.md  fixture-outcomes.md  flow-network-model.md  git-workflow.md  hotfix-workflow.md  model-consistency-v1.md  release-workflow.md  roadmap.md  runbook-release-operations.md  scope-and-nfr-v1.md  security-secrets-policy.md  testing-reliability.md  us-201-integration-compatibility.md
docs/benchmarks/: engine-smoke-baseline.json  engine-smoke-budgets.json  engine-smoke.md  web-test-stability-baseline.json  web-test-stability-budgets.json
infra/: docker-compose.yml
scripts/: benchmark-engine.mjs  check-engine-benchmark.mjs  reset-local.sh  run-engine-tests.sh  run-web-test-stability.sh  setup-local.sh
services/engine-cpp/: CMakeLists.txt  Dockerfile
services/engine-cpp/include/scheduler/: assignment_extractor.hpp  graph_builder.hpp  problem_input.hpp
services/engine-cpp/src/: assignment_extractor.cpp  flow_network.cpp  flow_network.hpp  graph_builder.cpp  main.cpp  problem_input.cpp  solver.cpp  solver.hpp
services/engine-cpp/tests/: solver_test.cpp
(+109 files in other folders)
